# CuteThulhu

./: .gitignore  deploy.yml  hosts  pyproject.toml
cutethulhu/: __init__.py  dice.py
